refactor: refactorizacón de clases de implementación usecase